--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.mx.zoom_allinonesdk">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
